tests/standalone-tests/valid/evaluate-multiply.lua
local num = 12 * 12

print(num)

static_assert(num == 144)
