tests/standalone-tests/failing/static-assert.lua
static_assert(12 == 16)